# sourcekit-bazel-bsp

./: MODULE.bazel  README.md
.bsp/: config.json
Example/: MODULE.bazel
Example/.bsp/: config.json
Sources/SourceKitBazelBSP/RequestHandlers/: DidInitializeHandler.swift  InitializeHandler.swift  PrepareHandler.swift
Sources/SourceKitBazelBSP/RequestHandlers/BuildTargets/: BuildTargetsHandler.swift
Sources/SourceKitBazelBSP/RequestHandlers/SKOptions/: BazelTargetAquerier.swift  BazelTargetCompilerArgsExtractor.swift  CompilerArgumentsProcessor.swift  SKOptionsHandler.swift
Sources/SourceKitBazelBSP/RequestHandlers/WatchedFiles/: WatchedFileChangeHandler.swift
Sources/SourceKitBazelBSP/Server/: InitializedServerConfig.swift  SourceKitBazelBSPServer.swift
Sources/SourceKitBazelBSP/SharedUtils/Shell/: CommandRunner.swift  RunningProcess.swift
Sources/sourcekit-bazel-bsp/Commands/: Serve.swift
Tests/SourceKitBazelBSPTests/: BSPMessageHandlerTests.swift  BazelTargetCompilerArgsExtractorTests.swift  PrepareHandlerTests.swift  WatchedFileChangeHandlerTests.swift
rules/: bsp_config.json.tpl  setup_sourcekit_bsp.bzl
