bazel_dep(
    name = "rules_swift",
    version = "3.0.2", # 3.1.0 seems to break lldb breakpoints.
    repo_name = "build_bazel_rules_swift",
)

# We need a commit that has not yet made into a release, so overriding it for now
bazel_dep(
    name = "rules_apple",
    version = "4.1.2",
    repo_name = "build_bazel_rules_apple",
)

bazel_dep(name = "apple_support", version = "1.23.1", repo_name = "build_bazel_apple_support")

bazel_dep(name = "aspect_bazel_lib", version = "2.9.3")
